Disable scrollbar-gutter due to bug in Chromium browsers

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,9 @@
   font-optical-sizing: auto;
   font-variation-settings: "slnt" 0;
 
-  scrollbar-gutter: stable;
+  /* Blink: "position: fixed" does not respect "scrollbar-gutter: stable" */
+  /* https://issues.chromium.org/issues/40792788 */
+  /* scrollbar-gutter: stable; */
   --horizontal-main-margin: 36px;
   @media (min-width: 640px) {
     --horizontal-main-margin: 72px;
